--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 *.tar.gz
 *.spell
 *.cache
+start conda jacks env HERE.bat
+/build
+test_data/NOTEEVENTS.csv
+/dist
+/jamspell.egg-info
+/test_data/pickles
+/test_data/umlsSentences.txt.old
+.vscode/settings.json
