--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ test_data/NOTEEVENTS.csv
 /test_data/noteevents_clean_gpt2format.txt
 /test_data/noteevents_rows.txt
 test_data/umlsSentences.txt
+medSpellCheck.zip
